logs/dag_id=Projet1/run_id=manual__2023-11-24T13:59:18.726931+00:00/task_id=create_table/attempt=2.log
[2023-11-24T13:59:30.348+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=non-requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-24T13:59:18.726931+00:00 [queued]>
[2023-11-24T13:59:30.367+0000] {taskinstance.py:1159} INFO - Dependencies all met for dep_context=requeueable deps ti=<TaskInstance: Projet1.create_table manual__2023-11-24T13:59:18.726931+00:00 [queued]>
[2023-11-24T13:59:30.368+0000] {taskinstance.py:1361} INFO - Starting attempt 2 of 2
[2023-11-24T13:59:30.384+0000] {taskinstance.py:1382} INFO - Executing <Task(PostgresOperator): create_table> on 2023-11-24 13:59:18.726931+00:00
[2023-11-24T13:59:30.392+0000] {standard_task_runner.py:57} INFO - Started process 4125 to run task
[2023-11-24T13:59:30.397+0000] {standard_task_runner.py:84} INFO - Running: ['***', 'tasks', 'run', 'Projet1', 'create_table', 'manual__2023-11-24T13:59:18.726931+00:00', '--job-id', '857', '--raw', '--subdir', 'DAGS_FOLDER/Projet.py', '--cfg-path', '/tmp/tmpvh4n2_pu']
[2023-11-24T13:59:30.399+0000] {standard_task_runner.py:85} INFO - Job 857: Subtask create_table
[2023-11-24T13:59:30.494+0000] {task_command.py:416} INFO - Running <TaskInstance: Projet1.create_table manual__2023-11-24T13:59:18.726931+00:00 [running]> on host b36ebcee5948
[2023-11-24T13:59:30.654+0000] {taskinstance.py:1662} INFO - Exporting env vars: AIRFLOW_CTX_DAG_OWNER='***' AIRFLOW_CTX_DAG_ID='Projet1' AIRFLOW_CTX_TASK_ID='create_table' AIRFLOW_CTX_EXECUTION_DATE='2023-11-24T13:59:18.726931+00:00' AIRFLOW_CTX_TRY_NUMBER='2' AIRFLOW_CTX_DAG_RUN_ID='manual__2023-11-24T13:59:18.726931+00:00'
[2023-11-24T13:59:30.659+0000] {sql.py:274} INFO - Executing: -- -- Suppression des tables s'ils existent
-- DROP TABLE IF EXISTS "Urgences";
-- DROP TABLE IF EXISTS "Ages";
-- DROP TABLE IF EXISTS "Departements";

-- Supprimer toutes les contraintes de clé étrangère liées à la table "urgence"
ALTER TABLE Urgences DROP CONSTRAINT /* nom_de_la_contrainte_fk */;

-- Supprimer la table "urgence"
DROP TABLE IF EXISTS Urgences;

-- Supprimer toutes les contraintes de clé étrangère liées à la table "ages"
ALTER TABLE Ages DROP CONSTRAINT /* nom_de_la_contrainte_fk */;

-- Supprimer la table "ages"
DROP TABLE IF EXISTS Ages;

-- Supprimer toutes les contraintes de clé étrangère liées à la table "departement"
ALTER TABLE Departements DROP CONSTRAINT ;

-- Supprimer la table "departement"
DROP TABLE IF EXISTS Departements;

-- Supprimer toutes les contraintes de clé étrangère liées à la table "departement"
ALTER TABLE Age DROP CONSTRAINT ;

-- Supprimer la table "departement"
DROP TABLE IF EXISTS Age;






-- -- Création des tables

-- CREATE TABLE "Departements"
-- (
--     num_dep VARCHAR(255) PRIMARY KEY,
--     dep_name VARCHAR(255),
--     region_name VARCHAR(255)
-- );

-- CREATE TABLE "Ages"
-- (
--     Code_age integer PRIMARY KEY,
--     Agess VARCHAR(255)
-- );

-- -- CREATE TABLE "passage_urgence"
-- -- (
-- --    num_dep 
-- --    DATA
-- --    tranche_age
-- --    );

-- -- CREATE TABLE "hospitalisation"
-- --    num_dep
-- --    date
-- --    );


-- CREATE TABLE "Urgences"
-- (
--     dep VARCHAR(255),
--     date_de_passage date ,
--     sursaud_cl_age_corona integer , 
--     nbre_pass_corona FLOAT, 
--     nbre_pass_tot FLOAT, 
--     nbre_hospit_corona FLOAT,
--     nbre_pass_corona_h FLOAT, 
--     nbre_pass_corona_f FLOAT, 
--     nbre_pass_tot_h FLOAT, 
--     nbre_pass_tot_f FLOAT,
--     nbre_hospit_corona_h FLOAT, 
--     nbre_hospit_corona_f FLOAT, 
--     nbre_acte_corona FLOAT, 
--     nbre_acte_tot FLOAT,
--     nbre_acte_corona_h FLOAT, 
--     nbre_acte_corona_f FLOAT, 
--     nbre_acte_tot_h FLOAT, 
--     nbre_acte_tot_f FLOAT
-- );

-- -- Ajout des contraintes de clé étrangère
-- ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_dep_fkey FOREIGN KEY (dep) REFERENCES "Departements"(num_dep);
-- ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_age_fkey FOREIGN KEY (sursaud_cl_age_corona) REFERENCES "Ages"(Code_age);

[2023-11-24T13:59:30.687+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-24T13:59:30.710+0000] {base.py:73} INFO - Using connection ID 'postgres_connexion' for task execution.
[2023-11-24T13:59:30.800+0000] {sql.py:418} INFO - Running statement: -- -- Suppression des tables s'ils existent
-- DROP TABLE IF EXISTS "Urgences";
-- DROP TABLE IF EXISTS "Ages";
-- DROP TABLE IF EXISTS "Departements";

-- Supprimer toutes les contraintes de clé étrangère liées à la table "urgence"
ALTER TABLE Urgences DROP CONSTRAINT /* nom_de_la_contrainte_fk */;

-- Supprimer la table "urgence"
DROP TABLE IF EXISTS Urgences;

-- Supprimer toutes les contraintes de clé étrangère liées à la table "ages"
ALTER TABLE Ages DROP CONSTRAINT /* nom_de_la_contrainte_fk */;

-- Supprimer la table "ages"
DROP TABLE IF EXISTS Ages;

-- Supprimer toutes les contraintes de clé étrangère liées à la table "departement"
ALTER TABLE Departements DROP CONSTRAINT ;

-- Supprimer la table "departement"
DROP TABLE IF EXISTS Departements;

-- Supprimer toutes les contraintes de clé étrangère liées à la table "departement"
ALTER TABLE Age DROP CONSTRAINT ;

-- Supprimer la table "departement"
DROP TABLE IF EXISTS Age;






-- -- Création des tables

-- CREATE TABLE "Departements"
-- (
--     num_dep VARCHAR(255) PRIMARY KEY,
--     dep_name VARCHAR(255),
--     region_name VARCHAR(255)
-- );

-- CREATE TABLE "Ages"
-- (
--     Code_age integer PRIMARY KEY,
--     Agess VARCHAR(255)
-- );

-- -- CREATE TABLE "passage_urgence"
-- -- (
-- --    num_dep 
-- --    DATA
-- --    tranche_age
-- --    );

-- -- CREATE TABLE "hospitalisation"
-- --    num_dep
-- --    date
-- --    );


-- CREATE TABLE "Urgences"
-- (
--     dep VARCHAR(255),
--     date_de_passage date ,
--     sursaud_cl_age_corona integer , 
--     nbre_pass_corona FLOAT, 
--     nbre_pass_tot FLOAT, 
--     nbre_hospit_corona FLOAT,
--     nbre_pass_corona_h FLOAT, 
--     nbre_pass_corona_f FLOAT, 
--     nbre_pass_tot_h FLOAT, 
--     nbre_pass_tot_f FLOAT,
--     nbre_hospit_corona_h FLOAT, 
--     nbre_hospit_corona_f FLOAT, 
--     nbre_acte_corona FLOAT, 
--     nbre_acte_tot FLOAT,
--     nbre_acte_corona_h FLOAT, 
--     nbre_acte_corona_f FLOAT, 
--     nbre_acte_tot_h FLOAT, 
--     nbre_acte_tot_f FLOAT
-- );

-- -- Ajout des contraintes de clé étrangère
-- ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_dep_fkey FOREIGN KEY (dep) REFERENCES "Departements"(num_dep);
-- ALTER TABLE "Urgences" ADD CONSTRAINT Urgences_age_fkey FOREIGN KEY (sursaud_cl_age_corona) REFERENCES "Ages"(Code_age);
, parameters: None
[2023-11-24T13:59:30.805+0000] {taskinstance.py:1937} ERROR - Task failed with exception
Traceback (most recent call last):
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/operators/sql.py", line 280, in execute
    output = hook.run(
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 392, in run
    self._run_command(cur, sql_statement, parameters)
  File "/home/airflow/.local/lib/python3.8/site-packages/airflow/providers/common/sql/hooks/sql.py", line 423, in _run_command
    cur.execute(sql_statement)
psycopg2.errors.SyntaxError: syntax error at or near ";"
LINE 7: ...ABLE Urgences DROP CONSTRAINT /* nom_de_la_contrainte_fk */;
                                                                      ^

[2023-11-24T13:59:30.835+0000] {taskinstance.py:1400} INFO - Marking task as FAILED. dag_id=Projet1, task_id=create_table, execution_date=20231124T135918, start_date=20231124T135930, end_date=20231124T135930
[2023-11-24T13:59:30.858+0000] {standard_task_runner.py:104} ERROR - Failed to execute job 857 for task create_table (syntax error at or near ";"
LINE 7: ...ABLE Urgences DROP CONSTRAINT /* nom_de_la_contrainte_fk */;
                                                                      ^
; 4125)
[2023-11-24T13:59:30.898+0000] {local_task_job_runner.py:228} INFO - Task exited with return code 1
[2023-11-24T13:59:30.922+0000] {taskinstance.py:2778} INFO - 0 downstream tasks scheduled from follow-on schedule check
